# aegis

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aegis-browser/: background.js  manifest.json
aegis-browser/_locales/en/: messages.json
aegis-browser/_locales/es/: messages.json
aegis-browser/content/: detector.js  overlay.css
aegis-browser/options/: options.html  options.js
aegis-browser/popup/: blocked.html  popup.css  popup.html  popup.js
aegis-browser/rules/: blocklist.json  blocklist_rules.json  official_sites.json
crates/aegis-core/: Cargo.toml
crates/aegis-core/benches/: parser_bench.rs
crates/aegis-core/src/: command_parser.rs  hash_check.rs  lib.rs  package_analyzer.rs  pattern_engine.rs  typosquat.rs
crates/aegis-python/: Cargo.toml
crates/aegis-python/src/: lib.rs
native/: CMakeLists.txt
native/etc/: aegis-default.yml  aegisd.service
native/src/bpf/: aegis_common.h  aegis_lsm.bpf.c
native/src/daemon/: agent_monitor.cpp  agent_monitor.h  bpf_manager.cpp  bpf_manager.h  database.cpp  database.h  http_client.cpp  http_client.h  ipc_server.cpp  ipc_server.h  main.cpp  policy_engine.cpp  policy_engine.h  signal_handler.cpp  signal_handler.h  typosquat.cpp  typosquat.h
native/tests/: test_ipc.cpp  test_policy_engine.cpp  test_typosquat.cpp
native/vmlinux/: README.md
python/aegis/: __init__.py  __main__.py  alert.py  cli.py  config.py  daemon_client.py  daemon_install.py  utils.py
python/aegis/analyzer/: cargo.py  npm.py  osv.py  package.py  pypi.py
python/aegis/browser/: __init__.py  native_host.py
python/aegis/db/: migrations.py  models.py
python/aegis/hooks/: __init__.py  claude.py  generic.py
python/aegis/monitor/: destructive.py  process.py  shell_hook.sh  terminal.py
python/aegis/rules/: engine.py
python/aegis/rules/defaults/: behavior.yml  lifecycle.yml  typosquat.yml
rules/: malicious_scripts.yar  network_exfil.yar  obfuscation.yar
tests/fixtures/: typosquat_names.json
tests/fixtures/malicious_setup_py/: setup.py
tests/fixtures/safe_package/: package.json  setup.py
tests/integration/: test_ebpf.py
tests/python/: test_agent_detection.py  test_agent_log.py  test_analyzer.py  test_check_hook.py  test_cli.py  test_config.py  test_daemon_client.py  test_db.py  test_destructive.py  test_hook.py  test_monitor.py  test_native_host.py  test_rules.py  test_slopsquat.py
