[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = { workspace = true }
strsim = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_bench"
harness = false
